# pytest-picked

./: .bandit  .checks.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyup.yml  .travis.yml  CHANGELOG.md  Pipfile  README.md  README.rst  appveyor.yml  modes.py  pyproject.toml  pytest_picked.py  requirements_test.txt  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: changelog.yml  deploy.yml  publish.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  test-pypi-publish.yml  tests.yml
docs/: conf.py
pytest_picked/: modes.py  plugin.py
tests/: test_modes.py  test_pytest_picked.py
